# hamd-community

./: .gitignore  CITATION.cff  LICENSE  LICENSE_SUMMARY.md  README.md  pyproject.toml  requirements.txt
benchmarks/: run_exact_small.py  run_hubo_small.py  run_portfolio_small.py  run_public_benchmarks.sh
data/cubic_hubo/: cubic_n100.json  cubic_n50.json  cubic_n75.json
docs/: benchmark_notes.md  community_vs_enterprise.md  faq.md  method_overview.md  quickstart.md
examples/: example_exact_small.py  example_hubo_small.py  example_portfolio_small.py
hamd/: __init__.py
hamd/baselines/: __init__.py  sa_qubo.py  tabu_qubo.py
hamd/core/: __init__.py  kswap.py  metrics.py  native_cubic_hamd.py  projection.py  utils.py
hamd/generators/: __init__.py  cubic_hubo.py  cubic_portfolio_toy.py
paper/: paper_results_public.json
tests/: test_exact_small.py  test_generators.py  test_projection.py
