[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "hamd-community"
version     = "1.0.0"
description = "HAMD Research Release — native cubic K-cardinality optimisation"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "Noncommercial Research/Evaluation" }
authors     = [{ name = "Symplectic Optimization", email = "grserb.research@gmail.com" }]
keywords    = ["combinatorial optimisation", "QUBO", "HUBO", "portfolio optimisation",
               "higher-order", "binary optimisation", "adiabatic dynamics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "torch>=2.1.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
bench = ["pandas>=2.0.0", "scipy>=1.11.0", "matplotlib>=3.7.0"]
test  = ["pytest>=7.0"]

[project.urls]
Homepage    = "https://github.com/symplectic-opt/hamd-community"
Issues      = "https://github.com/symplectic-opt/hamd-community/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hamd*"]
